Removed the checker logic
